# rust_course

chat/: Cargo.toml  README.md
chat/chat_client/: Cargo.toml  README.md
chat/chat_client/src/: command.rs  interactive.rs  lib.rs  main.rs
chat/chat_lib/: Cargo.toml  README.md
chat/chat_lib/src/: message.rs
chat/chat_server/: Cargo.toml  README.md
chat/chat_server/src/: main.rs
chat/sample_files/: a.tgz
lesson_1_hello_world/src/: main.rs
lesson_2_text_manipulation/: Cargo.toml
lesson_2_text_manipulation/src/: command.rs  interactive.rs  lib.rs  main.rs  mutation.rs
text_manipulation/: Cargo.toml
text_manipulation/chat_client/: Cargo.toml
text_manipulation/chat_client/src/: command.rs  main.rs
text_manipulation/chat_lib/src/: lib.rs
text_manipulation/chat_server/: Cargo.toml
text_manipulation/chat_server/src/: main.rs
text_manipulation/src/: command.rs  interactive.rs  lib.rs  main.rs  message.rs  mutation.rs
