[package]
name = "chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = {version = "1.0.190", features = ["derive"]}
threadpool = "1.8.1"
chrono = "0.4.31"
image = "0.24.7"
