[package]
name = "chat_lib"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.108"
serde = {version = "1.0.190", features = ["derive"]}
bincode = "1.3.3"
anyhow = { version = "1.0.75", features = ["backtrace"] }
thiserror = "1.0.50"
