[package]
name = "chat_server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
chat_lib = { path = "../chat_lib" }
log = "0.4.20"
stderrlog = "0.5.4"
anyhow = { version = "1.0.75", features = ["backtrace"] }
